--- a/language-c99-simple.cabal
+++ b/language-c99-simple.cabal
@@ -20,6 +20,7 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.10 && <5,
-                       language-c99 >= 0.1.0.0
+                       language-c99 >= 0.1.0.0,
+                       language-c99-util >= 0.1.0.0
   hs-source-dirs:      src
   default-language:    Haskell2010
