--- a/language-c99-simple.cabal
+++ b/language-c99-simple.cabal
@@ -16,7 +16,8 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:
+  exposed-modules:    Language.C99.Simple,
+                      Language.C99.Simple.AST
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.10 && <5,
