--- a/language-c99-simple.cabal
+++ b/language-c99-simple.cabal
@@ -22,6 +22,7 @@ library
   -- other-extensions:    
   build-depends:       base >=4.10 && <5,
                        language-c99 >= 0.1.0.0,
-                       language-c99-util >= 0.1.0.0
+                       language-c99-util >= 0.1.0.0,
+                       mtl -any
   hs-source-dirs:      src
   default-language:    Haskell2010
