--- a/language-c99-simple.cabal
+++ b/language-c99-simple.cabal
@@ -18,6 +18,8 @@ cabal-version:       >=1.10
 library
   exposed-modules:    Language.C99.Simple,
                       Language.C99.Simple.AST
+                      Language.C99.Simple.Translate,
+                      Language.C99.Simple.Util
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.10 && <5,
