--- a/language-c99-simple.cabal
+++ b/language-c99-simple.cabal
@@ -5,7 +5,7 @@ name:                language-c99-simple
 version:             0.1.0.0
 -- synopsis:            
 -- description:         
-license:             BSD3
+license:             MIT
 license-file:        LICENSE
 author:              Frank Dedden
 maintainer:          dev@dedden.net
