--- a/language-c99-simple.cabal
+++ b/language-c99-simple.cabal
@@ -29,8 +29,8 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.10 && <5,
-                       language-c99 >= 0.1.0.0,
-                       language-c99-util >= 0.1.0.0,
-                       mtl -any
+                       language-c99 == 0.1.*,
+                       language-c99-util == 0.1.*,
+                       mtl >= 2.2.0 && < 2.3
   hs-source-dirs:      src
   default-language:    Haskell2010
