Added source repo to .cabal

--- a/language-c99-simple.cabal
+++ b/language-c99-simple.cabal
@@ -20,6 +20,10 @@ build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
+source-repository head
+  type:     git
+  location: git://github.com:fdedden/language-c99-simple.git
+
 library
   exposed-modules:    Language.C99.Simple,
                       Language.C99.Simple.AST
